--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   shared_preferences: ^2.0.8
   localstorage: ^4.0.0+1
   url_launcher: ^6.0.14
+  cookie_jar: ^3.0.1
+  dio_cookie_manager: ^2.0.0
+  path_provider: ^2.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
